--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,9 @@
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
-mysql pass = 0000
+ruby 2.2.0
+rails 4.2.3
+mysql pass = 0000;
 
 Things you may want to cover:
 
